# sendgrid-docker-image

./: Dockerfile  README.md  pyproject.toml  sendgrid_email.py
.github/workflows/: send_email.yaml
